# wordle

./: .clang-format  .gitignore  CMakeLists.txt  README.md  premake5.lua
src/: main.cpp
